# trend-distributed-spec-decoding-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
configs/: config.py
docs/rfcs/: 001-architecture.md
services/: orchestrator.py
tests/integration/: test_pipeline.py
tests/unit/: test_core.py  test_runtime.py
