[tool.poetry]
name = "distributed-spec-decoding-engine"
version = "0.1.0"
description = "High-performance speculative decoding framework"
authors = ["Principal Engineer <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gRPC = "1.50.0"
celery = "5.3.0"
distributed = "2023.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
